--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       <div id="banner_right">
         <button id="upload_button" class="banner_button">Upload</button>
         <p id="user_name">{{username}}</p>
-        <button id="logout_button" class="banner_button">Log Out</button>
+        <a href="/login"><button id="logout_button" class="banner_button">Log Out</button></a>
     </div>
 
     </div>
