--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
     <div id="banner">
       <p id="banner_logo">FreeSpeed</p>
       <div id="banner_right">
-        <button id="upload_button" class="banner_button">Upload</button>
+        <a href="/upload-data"><button id="upload_button" class="banner_button">Upload</button></a>
         <p id="user_name">{{username}}</p>
         <a href="/login"><button id="logout_button" class="banner_button">Log Out</button></a>
     </div>
