--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,12 @@
+html *
+{
+   font: Roboto;
+}
+
 body {
   padding:0 0;
   margin:0 0;
-  background-color: #ccc;
+  background-color: #f2f2f2;
 }
 
 button {
@@ -43,9 +48,9 @@ textarea {
 
 #banner_logo {
   display: inline-block;
-  font-size: 24px;
-  font-weight: 800;
   line-height: 100px;
+  width: 100px;
+  margin-right: 20px;
 }
 
 .banner_button {
@@ -76,6 +81,14 @@ textarea {
 #banner_right {
   display: inline-block;
   float: right;
+  height: 100px;
+  padding: 30px 0;
+}
+
+#person_type {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 #user_name {
@@ -99,7 +112,6 @@ textarea {
 #white_background_wrapper {
   position: relative;
   overflow: hidden;
-  height: 700px;
   width: 1300px;
   margin: 0 auto;
   background-color: white;
@@ -119,15 +131,32 @@ textarea {
   color: black;
   z-index: 1;
   font-size: 21px;
-  border-bottom: 1px solid #ccc;
+}
+
+#dropdown_label {
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropdown-menu {
+  width: 100px;
+}
+#dropdown_button {
+  background-color: transparent;
+  font-size: 24px;
+  color: black;
+  border: none;
+  border-bottom: 1px solid red;
+  padding: 0 0;
 }
 
 .type_selector_button {
-  display: inline-block;
-  margin-right: 40px;
   font-size: 24px;
   cursor: pointer;
-
 }
 
 .type_selector_button:hover {
@@ -151,7 +180,6 @@ textarea {
   display: inline-block;
   width: 250px;
   height: 100%;
-  border-right: 1px solid #ccc;
 }
 
 #rowers_title_div {
@@ -195,7 +223,8 @@ textarea {
   display: inline-block;
   width: 1009px;
   padding: 20px 20px;
-  border-bottom: 1px solid #ccc;
+  border: none;
+  border-left: 1px solid #ccc;
 }
 
 #graph_title {
@@ -227,4 +256,37 @@ textarea {
 .focus circle {
   fill: none;
   stroke: steelblue;
+}
+
+#averages_div {
+  border-top: 1px solid #ccc;
+}
+
+#averages_div_title {
+  font-size: 24px;
+  font-weight: 800;
+}
+
+#averages_list {
+  margin: 0 0;
+  padding: 0 0;
+}
+
+#averages_list li {
+  list-style: none;
+  padding: 10px 0;
+}
+
+#profile_dropdown {
+  vertical-align: middle;
+}
+
+#profile_dropdown_button {
+  background-color: transparent;
+  color: black;
+  font-size: 24px;
+  padding: 0 0;
+  font-weight: 600;
+  border: none;
+  border-bottom:1px solid #ccc;
 }
