--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -105,6 +105,7 @@ a {
   border: 2px solid #000;
   transition: all 0.3s ease;
 }
+
 .manage-data-button:before, .manage-data-button:after {
   position: absolute;
   content: ' ';
@@ -200,17 +201,110 @@ h2 {
 	margin-top: 10px;
 }
 
+a {
+	color: blue;
+}
+
 button {
 	border: 0px;
 	background-color: transparent;
-}
-
-a {
-	color: blue;
 }
 
 #invite-user {
 	text-align: left;
 	margin-top: 15px;
 	margin-bottom: 20px;
+}
+
+/* The Modal (background) */
+.modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 10px 16px;
+    background-color: black;
+    color: white;
+		margin-bottom: 10px;
+}
+
+.modal-body {
+	padding: 2px 16px;
+	width: 90%;
+	margin: auto;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+br {
+	display: block;
+	margin: 5px 0;
+}
+
+#submitUpload {
+	background: transparent;
+	padding: 10px 20px;
+	border: 2px solid black;
+}
+
+#submitUpload:hover {
+	background: black;
+	color: white;
+	padding: 10px 20px;
+	border: 2px solid black;
+	transition: all 0.3s ease;
 }
