--- a/templates/home.html
+++ b/templates/home.html
@@ -103,4 +103,5 @@
   </div>
   <script src="/js/graph.js"></script>
   <script src="/js/home.js"></script>
+  <script src="/js/test_graph.js"></script>
 </html>
