--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,66 +1,62 @@
+
+@keyframes fadeIn {
+   0% {opacity: 0;}
+   100% {opacity: 1;}
+}
+
+
 body{
-	background-color: #47050e;
-	
+ font-family: 'Roboto Mono', monospace;
 }
 
-#wrapper{
-	background-color: white; 
-	text-align: center;
-	max-width: 768px;
-	margin: 0 auto;
-	border-radius: 25px;
-	
+#box{
+  height: 250px;
+  width: 400px;
+  text-align: center; 
+  position:absolute;
+  left: calc(50% - 220px);
+  top: 180px;
+  border:3px solid white;
+  animation: 3s ease-out 0s 1 fadeIn;
+}
+
+#header{
+  color: white;
+  height: 100vh;
+  width: 100%; 
+  opacity: 0.82;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/FullSizeBack2.jpg') no-repeat center;
+  background-size:cover;
+}
+
+#freeSpeed{
+  font-size: 55px;
 }
 
 
-h1{
-	padding-top: 20px;
-	font-family: 'Nexa Light', sans-serif;  
-
-}
 
 
-p{
-	font-size: 17px; 
-	font-family: 'Nexa Light', sans-serif; 
-}
 
-button{
-	height: 40px;
+#signin {
+  background: none;
+  height: 50px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 10px;
-  color: #080108;
-  background: #ffffff;
-  padding: 10px 18px 10px 20px;
-  border: solid #871616 2px;
+  border-radius: 0px;
+  text-shadow: 4px 2px 6px #666666;
+   font-family: 'Roboto Mono', monospace;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #ffffff 2px;
   text-decoration: none;
 }
 
-button:hover {
-  background: #731010;
+#signin:hover {
+  background: rgb(255,255,255,0.5);
   text-decoration: none;
-  color: white;
 }
 
-input{
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 10px;
-  padding: 10px 20px;
-  border: 1px solid #b7b7b7;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  color: rgba(0,142,198,1);
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  background: rgba(252,252,252,1);
-  -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
-  box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
-  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+#text{
+  color: black;
 }
