--- a/public/css/home.css
+++ b/public/css/home.css
@@ -99,8 +99,8 @@ textarea {
 
 #logout_button {
   background-color: white;
-  border: none;
-  color: blue;
+  padding: 0 10px;
+  cursor: pointer;
 }
 #banner_hr {
   border-color: #f1f1f1;
@@ -114,6 +114,8 @@ textarea {
   width: 1300px;
   margin: 0 auto;
   background-color: white;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
 
 #type_selector {
@@ -190,6 +192,7 @@ textarea {
 
 #rowers_title {
   text-align: center;
+  font-weight: 600;
 }
 
 #rowers_list {
@@ -220,11 +223,8 @@ textarea {
 }
 
 #graph_div {
-  float: right;
-  width: 1050px;
-  padding: 20px 20px;
-  border: none;
-  border-left: 1px solid #ccc;
+  width: 100%;
+  padding: 20px 0;
 }
 
 #graph_title {
@@ -259,8 +259,8 @@ textarea {
 }
 
 #averages_div {
+  width: 100%;
   border-top: 1px solid #ccc;
-  float: right;
 }
 
 #averages_div_title {
@@ -285,6 +285,7 @@ textarea {
   background-color: transparent;
   color: black;
   padding: 0 0;
+  font-size: 24px;
   font-weight: 600;
   border: none;
   border-bottom:1px solid #ccc;
@@ -299,13 +300,13 @@ textarea {
 
 #stats_title {
   display: inline-block;
-  font-size: 24px;
   font-weight: 600;
-  padding: 15px 15px;
+  padding: 20px 20px;
 }
 
 #choose_workout_div {
   float: right;
+  padding: 0 20px;
 }
 
 #choose_statistic_div {
@@ -315,9 +316,13 @@ textarea {
 
 #stats_header {
   display: inline-block;
-  width: 1050px;
+  width: 100%;
   height: 63px;
-  padding: 0 20px;
-  border-left: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
+}
+
+#float_right_div {
+  float: right;
+  width: 1048px;
+  border-left: 1px solid #ccc;
 }
