--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,3 @@
-
 @keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
@@ -7,12 +6,13 @@
 
 body{
  font-family: 'Roboto Mono', monospace;
+ margin: 0 0;
 }
 
 #box{
   height: 250px;
   width: 400px;
-  text-align: center; 
+  text-align: center;
   position:absolute;
   left: calc(50% - 220px);
   top: 180px;
@@ -23,7 +23,7 @@ body{
 #header{
   color: white;
   height: 100vh;
-  width: 100%; 
+  width: 100%;
   opacity: 0.82;
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/FullSizeBack2.jpg') no-repeat center;
   background-size:cover;
