--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -52,7 +52,7 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 body {
-  background: #f2f2f2;
+  background: #fff;
 }
 
 a {
@@ -101,7 +101,7 @@ a {
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-	background: #f2f2f2;
+	background: #fff;
   border: 2px solid #000;
   transition: all 0.3s ease;
 }
