--- a/templates/home.html
+++ b/templates/home.html
@@ -20,14 +20,14 @@
 <body>
   <div>
     <div id="banner">
-      <img id="banner_logo" src="/images/freespeed_logo.png"></img>
+      <img id="banner_logo" src="/images/freespeed_logo.png" href="/profile"></img>
       <a href="/manage-data"><button id="upload_button" class="banner_button">Manage Data</button></a>
       <div id="banner_right">
         <div class="dropdown" id="profile_dropdown">
           <button class="btn btn-primary dropdown-toggle"
             type="button" data-toggle="dropdown" id="profile_dropdown_button">{{username}}<span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li id="logout_button">Log Out</li>
+            <a href="/auth/logout"<li id="logout_button">Log Out</li></a>
           </ul>
         </div>
     </div>
@@ -102,9 +102,93 @@
         </div>
       </div>
         <div id="averages_div">
-          <p id="averages_div_title">Team Averages</p>
-            <table id="averages_table" style="width:70%">
-</table>
+          <p id="averages_div_title">Averages</p>
+            <table id="averages_table">
+              <tr>
+                <th class="title_cell">Stat</th>
+                <th class="title_cell">Your Average</th>
+                <th class="title_cell">Team Average</th>
+                <th class="title_cell">+/-</th>
+              </tr>
+              <tr>
+                <td>Power</td>
+                <td>3000</td>
+                <td>20</td>
+                <td>Germany</td>
+              </tr>
+              <tr>
+                <td>Speed</td>
+                <td>22</td>
+                <td>88</td>
+                <td>Mexico</td>
+              </tr>
+              <tr>
+                <td>Slip</td>
+                <td>22</td>
+                <td>45</td>
+                <td>Austria</td>
+              </tr>
+              <tr>
+                <td>Wash</td>
+                <td>15 degrees</td>
+                <td>Helen Bennett</td>
+                <td>UK</td>
+              </tr>
+              <tr>
+                <td>Stroke/Min</td>
+                <td>Laughing Bacchus Winecellars</td>
+                <td>Yoshi Tannamuri</td>
+                <td>Canada</td>
+              </tr>
+              <tr>
+                <td>Catch Angle</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Finish Angle</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Max Force Angle</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Max Force</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Average Force</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Work</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Distance/Stroke</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+              <tr>
+                <td>Heart Rate</td>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+              </tr>
+            </table>
           </div>
         </div>
     </div>
