--- a/templates/home.html
+++ b/templates/home.html
@@ -87,9 +87,9 @@
             Workout Day:
             <div id="workout_selector" class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button"
-                data-toggle="dropdown" id="workout_button">Big booty<span class="caret"></span>
+                data-toggle="dropdown" id="workout_button">Big booty
               </button>
-              <ul id="workouts">
+              <ul class="dropdown-menu" id="workouts">
               </ul>
             </div>
       </div>
