--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -223,11 +223,12 @@ button {
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+		margin-left: 30%;
+		margin-top: 5%;
+    width: 600px; /* Full width */
+    height: 500px; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+		text-align: center;
 }
 
 /* Modal Content */
