made small change to navbar

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 <body>
   <div>
     <div id="banner">
-      <img id="banner_logo" src="/images/freespeed_logo.png" href="/profile"></img>
+      <a href="/profile"><img id="banner_logo" src="/images/freespeed_logo.png"></img></a>
       <a href="/manage-data"><button id="upload_button" class="banner_button">Manage Data</button></a>
       <div id="banner_right">
         <div class="dropdown" id="profile_dropdown">
