can no longer delete yourself

--- a/templates/manage-data-user.html
+++ b/templates/manage-data-user.html
@@ -8,6 +8,7 @@
     <script src="/js/manage-user.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="username" content={{username}}>
+    <meta name="firstname" content={{firstname}}>
   </head>
   <body>
     <div id="banner">
@@ -16,7 +17,7 @@
       <div id="banner_right">
         <div class="dropdown" id="profile_dropdown">
           <button class="btn btn-primary dropdown-toggle"
-            type="button" data-toggle="dropdown" id="profile_dropdown_button">{{username}}<span class="caret"></span></button>
+            type="button" data-toggle="dropdown" id="profile_dropdown_button">{{firstname}}<span class="caret"></span></button>
           <ul class="dropdown-menu">
             <a href="/auth/logout"<li id="logout_button">Log Out</li></a>
           </ul>
@@ -24,7 +25,7 @@
       </div>
     </div>
     <div id="main-container">
-      <h1>firstName lastName</h1>
+      <h1 id="">firstName lastName</h1>
       <table>
         <tr>
           <th>id</th>
