--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/css/home.css">
   <title>FreeSpeed</title>
   <meta name="username" content={{username}}>
+  <meta name="firstname" content={{firstname}}>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
       <div id="banner_right">
         <div class="dropdown" id="profile_dropdown">
           <button class="btn btn-primary dropdown-toggle"
-            type="button" data-toggle="dropdown" id="profile_dropdown_button">{{username}}<span class="caret"></span></button>
+            type="button" data-toggle="dropdown" id="profile_dropdown_button">{{firstname}}<span class="caret"></span></button>
           <ul class="dropdown-menu">
             <a href="/auth/logout"<li id="logout_button">Log Out</li></a>
           </ul>
