--- a/templates/manage-data-user.html
+++ b/templates/manage-data-user.html
@@ -3,6 +3,7 @@
   <head>
     <title> Manage {{username}} </title>
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/manage-data-user.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="/js/manage-user.js"></script>
