--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -220,7 +220,7 @@ button {
 }
 
 /* The Modal (background) */
-.modal {
+.usermodal {
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
