fixed graph stuff and added some data management code

--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@
             Workout Day:
             <div id="workout_selector" class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button"
-                data-toggle="dropdown" id="workout_button">Big booty
+                data-toggle="dropdown" id="workout_button">
               </button>
               <ul class="dropdown-menu" id="workouts">
               </ul>
