--- a/public/css/selectRowingStatus.css
+++ b/public/css/selectRowingStatus.css
@@ -7,6 +7,7 @@
 
 body{
  font-family: 'Roboto Mono', monospace;
+ margin: 0 0;
 }
 
 #classYearDiv{
@@ -23,11 +24,11 @@ body{
 }
 
 #box{
-	font-weight: bold; 
+	font-weight: bold;
 	padding-left: 30px;
-	padding-right: 30px; 
+	padding-right: 30px;
 	position:absolute;
-	height: 420px;
+	height: 320px;
   left: calc(50% - 220px);
   top: 160px;
   border:3px solid white;
@@ -37,7 +38,7 @@ body{
 #submitButton{
 	position: absolute;
 	left: 160px;
-	top: 360px; 
+	top: 260px;
 	background: none;
   height: 35px;
   -webkit-border-radius: 0;
@@ -47,7 +48,7 @@ body{
    font-family: 'Roboto Mono', monospace;
   color: #ffffff;
   font-size: 15px;
-  
+
   border: solid #ffffff 2px;
   text-decoration: none;
 }
