added data management stuff - delete workout

--- a/templates/manage-data.html
+++ b/templates/manage-data.html
@@ -40,7 +40,9 @@
         <div class="manage-data-button-container" id="manage-data-data-container">
           <img class="manage-data-img" src="/images/db.png" alt="DB Icon" height="80" width="80">
           <p class="manage-data-p"> Lorem ipsum dolor sit amet, sonet simul ocurreret mel te. Mollis discere vel no, sit no posse indoctum mnesarchum. Fuisset tincidunt instructior no eos, ea dignissim hendrerit mei.</p>
-          <a href="/upload-data"><button onclick="toggleWorkouts()" class="manage-data-button" id="manage-workouts-data-button"> Manage Data </button></a>
+          <!-- <a href="/upload-data"> -->
+          <button onclick="toggleWorkouts()" class="manage-data-button" id="manage-workouts-data-button"> Manage Data </button>
+          <!-- </a> -->
         </div>
       </div>
     </div>
